--- a/index.html
+++ b/index.html
@@ -9,32 +9,57 @@
 </head>
 <body>
 
-    <nav class="navbar">
-        <a href="index.html" class="logo">SK ELITE FITNESS</a>
-        <ul class="nav-links">
-            <li><a href="train.html">Train With Me</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="membership.html" class="btn-highlight">Membership</a></li>
-            <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
-        </ul>
-        <div class="hamburger">
-            <i class="fas fa-bars"></i>
-        </div>
-    </nav>
+   /* --- HOMEPAGE SIZE UPGRADES --- */
 
-    <header class="hero-section">
-        <div class="hero-slider">
-            <div class="slide active" style="background-image: url('images/slide1.jpg');"></div>
-            <div class="slide" style="background-image: url('images/slide2.jpg');"></div>
-            <div class="slide" style="background-image: url('images/slide3.jpg');"></div>
-        </div>
-        
-        <div class="hero-content">
-            <h1>TRANSFORM YOUR BODY</h1>
-            <p>Strength • Cardio • DMT • Freestyle</p>
-            <a href="membership.html" class="cta-button">TRY NOW / FIND OUT MORE</a>
-        </div>
-    </header>
+/* 1. BIGGER LOGO */
+.logo {
+    font-size: 2.2rem !important; /* Much bigger Brand Name */
+    font-weight: 900;
+    letter-spacing: 2px;
+}
+
+/* 2. BIGGER NAV LINKS (Train, Services, Contact) */
+.nav-links a {
+    font-size: 1.2rem !important; /* Larger menu text */
+    font-weight: bold;
+    text-transform: uppercase;
+    margin: 0 25px; /* More space between links */
+}
+
+/* 3. HUGE HERO TITLE ("TRANSFORM YOUR BODY") */
+.hero-content h1 {
+    font-size: 5rem !important; /* Massive Title */
+    letter-spacing: 5px;
+    text-shadow: 2px 2px 15px rgba(0,0,0,0.8);
+    margin-bottom: 20px;
+}
+
+/* 4. BIGGER SUBTITLE (Strength - Cardio...) */
+.hero-content p {
+    font-size: 2rem !important; /* Bigger subtitle */
+    margin-bottom: 40px;
+    font-weight: 500;
+    text-transform: uppercase;
+    background: rgba(0,0,0,0.3); /* Slight dark background to make it readable */
+    display: inline-block;
+    padding: 5px 15px;
+}
+
+/* 5. BIGGER "JOIN NOW" BUTTON */
+.cta-button {
+    padding: 20px 60px !important; /* Bigger button area */
+    font-size: 1.5rem !important; /* Bigger text inside button */
+    border-radius: 50px; /* Rounded pill shape looks more elite */
+    letter-spacing: 2px;
+}
+
+/* RESPONSIVE: Keep it readable on Mobile */
+@media (max-width: 768px) {
+    .logo { font-size: 1.5rem !important; }
+    .hero-content h1 { font-size: 3rem !important; }
+    .hero-content p { font-size: 1.2rem !important; }
+    .cta-button { padding: 15px 40px !important; font-size: 1.2rem !important; }
+}
 
     <section class="insta-bar">
         <div class="insta-content">
