--- a/weightloss-info.html
+++ b/weightloss-info.html
@@ -24,23 +24,28 @@
     </header>
 
     <section class="detail-content" style="padding: 50px 5%; background: white;">
-        <div class="container" style="display:flex; flex-wrap:wrap; gap:40px; align-items: center;">
+        <div class="container" style="display:flex; flex-wrap:wrap; gap:40px; align-items: flex-start;">
+            
             <div style="flex:1; min-width:300px;">
-                <img src="images/weightloss.jpg" style="width:100%; border-radius:10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
+                <img src="images/weightloss.jpg" style="width:100%; max-height: 500px; object-fit: cover; border-radius:10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
             </div>
-            <div style="flex:1; min-width:300px;">
-                <h2 style="color:#D32F2F; margin-bottom:20px; font-size: 2rem;">Burn Fat, Keep Muscle</h2>
-                <p style="line-height:1.8; margin-bottom:20px; font-size: 1.1rem; color: #555;">
+
+            <div style="flex:1.5; min-width:300px; padding-left: 20px;">
+                <h2 style="color:#D32F2F; margin-bottom:20px; font-size: 2.5rem; text-transform: uppercase;">Burn Fat, Keep Muscle</h2>
+                
+                <p style="line-height:1.8; margin-bottom:20px; font-size: 1.3rem; color: #333;">
                     Our High-Intensity Interval Training (HIIT) combined with calculated cardio is designed 
                     to maximize calorie burn during and after the workout. We focus on sustainable fat loss
                     that keeps your metabolism high.
                 </p>
-                <h3 style="margin-bottom:15px;">What You Get:</h3>
-                <ul style="margin-bottom:30px; margin-left:20px; line-height: 1.8;">
+
+                <h3 style="margin-bottom:15px; font-size: 1.5rem;">What You Get:</h3>
+                <ul style="margin-bottom:30px; margin-left:20px; line-height: 1.8; font-size: 1.3rem;">
                     <li>High Intensity Circuits</li>
                     <li>Calorie Deficit Strategy</li>
                     <li>Metabolic Conditioning</li>
                 </ul>
+
                 <a href="services.html" class="cta-button">START THIS PLAN</a>
             </div>
         </div>
