--- a/strength-info.html
+++ b/strength-info.html
@@ -14,6 +14,7 @@
         <ul class="nav-links">
             <li><a href="train.html" class="active-page">Train With Me</a></li>
             <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
         </ul>
         <div class="hamburger"><i class="fas fa-bars"></i></div>
