--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <div class="footer-links">
                 <a href="index.html">Home</a>
                 <a href="services.html">Services</a>
-                <a href="membership.html">Policies</a>
-                <a href="membership.html">Terms</a>
+                <a href="contact.html">Policies</a>
+                <a href="contact.html">Terms</a>
             </div>
             <div class="social-icons">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
