--- a/weightloss-info.html
+++ b/weightloss-info.html
@@ -47,7 +47,7 @@
                     <li>Metabolic Conditioning</li>
                 </ul>
 
-                <a href="services.html" class="cta-button">START THIS PLAN</a>
+                <a href="services.html?plan=weightloss" class="cta-button">START THIS PLAN</a>
             </div>
         </div>
     </section>
