--- a/strength-info.html
+++ b/strength-info.html
@@ -42,7 +42,7 @@
                     <li>Form Correction & Guidance</li>
                     <li>Progressive Overload Tracking</li>
                 </ul>
-                <a href="services.html" class="cta-button">START THIS PLAN</a>
+                <a href="services.html?plan=strength" class="cta-button">START THIS PLAN</a>
             </div>
         </div>
     </section>
