--- a/dmt-info.html
+++ b/dmt-info.html
@@ -47,7 +47,7 @@
                     <li>Injury Prevention</li>
                 </ul>
 
-                <a href="services.html" class="cta-button">START THIS PLAN</a>
+                <a href="services.html?plan=dmt" class="cta-button">START THIS PLAN</a>
             </div>
 
         </div>
