--- a/cardio-info.html
+++ b/cardio-info.html
@@ -42,7 +42,7 @@
                     <li>Speed & Agility Drills</li>
                     <li>Endurance Building</li>
                 </ul>
-                <a href="services.html" class="cta-button">START THIS PLAN</a>
+                <a href="services.html?plan=cardio" class="cta-button">START THIS PLAN</a>
             </div>
         </div>
     </section>
