--- a/yoga-info.html
+++ b/yoga-info.html
@@ -41,7 +41,7 @@
                     <li>Core Stability</li>
                     <li>Stress Relief & Breathing</li>
                 </ul>
-                <a href="services.html" class="cta-button">START THIS PLAN</a>
+                <a href="services.html?plan=yoga" class="cta-button">START THIS PLAN</a>
             </div>
         </div>
     </section>
