--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
             <li><a href="train.html">Train With Me</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html" class="active-page">Contact</a></li>
-            <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
+            <li><a href="services.html"><i class="fas fa-shopping-cart"></i></a></li>
         </ul>
         <div class="hamburger"><i class="fas fa-bars"></i></div>
     </nav>
