--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
             <li><a href="train.html">Train With Me</a></li>
             <li><a href="services.html" class="active-page">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
+            <li><a href="services.html"><i class="fas fa-shopping-cart"></i></a></li>
         </ul>
         <div class="hamburger"><i class="fas fa-bars"></i></div>
     </nav>
