--- a/freestyle-info.html
+++ b/freestyle-info.html
@@ -41,7 +41,7 @@
                     <li>Animal Flow</li>
                     <li>Prop-based Workouts (Tyres, Ropes)</li>
                 </ul>
-                <a href="services.html" class="cta-button">START THIS PLAN</a>
+                <a href="services.html?plan=freestyle" class="cta-button">START THIS PLAN</a>
             </div>
         </div>
     </section>
