--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <section class="insta-bar">
         <h2>FOLLOW THE JOURNEY</h2>
         <p>Daily tips, motivation, and transformation stories.</p>
-        <a href="https://instagram.com/sk_elitefitness" target="_blank" class="insta-btn">
-            <i class="fab fa-instagram"></i> @sk_elitefitness
-        </a>
+       <a href="https://instagram.com/sk_elitefitness" target="_blank" class="insta-btn" style="color: #D32F2F !important; font-weight: bold; text-decoration: none;">
+    <i class="fab fa-instagram"></i> @sk_elitefitness
+</a>
     </section>
 
     <footer id="footer">
