--- a/index.html
+++ b/index.html
@@ -51,11 +51,17 @@
                 <a href="contact.html">Policies</a>
                 <a href="contact.html">Terms</a>
             </div>
-            <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-            </div>
+            <div class="social-icons" style="margin-top: 15px;">
+    <a href="#" style="color: white; font-size: 1.5rem; margin: 0 10px; text-decoration: none;">
+        <i class="fab fa-facebook-f"></i>
+    </a>
+    <a href="#" style="color: white; font-size: 1.5rem; margin: 0 10px; text-decoration: none;">
+        <i class="fab fa-twitter"></i>
+    </a>
+    <a href="#" style="color: white; font-size: 1.5rem; margin: 0 10px; text-decoration: none;">
+        <i class="fab fa-youtube"></i>
+    </a>
+</div>
             <div class="copyright">&copy; 2026 SK Elite Fitness. All Rights Reserved.</div>
         </div>
     </footer>
