--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@
         </div>
     </header>
 
-    <section class="insta-bar">
-        <h2>FOLLOW THE JOURNEY</h2>
-        <p>Daily tips, motivation, and transformation stories.</p>
-       <a href="https://instagram.com/sk_elitefitness" target="_blank" class="insta-btn" style="color: #D32F2F !important; font-weight: bold; text-decoration: none;">
-    <i class="fab fa-instagram"></i> @sk_elitefitness
-</a>
-    </section>
+    <section class="insta-bar" style="text-align: center; padding: 60px 20px; background-color: #000; border-bottom: 2px solid #222;">
+    <h2 style="font-size: 3.5rem; color: white; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 2px;">
+        Follow The Journey
+    </h2>
+    <p style="font-size: 1.5rem; color: #ccc; margin-bottom: 30px;">
+        Daily tips, motivation, and transformation stories.
+    </p>
+    <a href="https://instagram.com/sk_elitefitness" target="_blank" class="insta-btn" style="color: #D32F2F !important; font-size: 1.8rem; font-weight: bold; text-decoration: none; border: 2px solid #D32F2F; padding: 10px 30px; border-radius: 50px; display: inline-block; transition: 0.3s;">
+        <i class="fab fa-instagram"></i> @sk_elitefitness
+    </a>
+</section>
 
     <footer id="footer">
         <div class="footer-content">
