--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </a>
 </section>
 
-    <footer id="footer">
+    <footer id="footer" style="text-align: center; padding: 40px 20px;">
         <div class="footer-content">
             <div class="footer-links">
                 <a href="index.html">Home</a>
