--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,9 @@
                     <a href="mailto:info@sk-elitefitness.in" class="social-box email">
                         <i class="fas fa-envelope"></i> Email Us
                     </a>
-                    <a href="https://instagram.com/sk_elitefitness" target="_blank" class="social-box insta">
-                        <i class="fab fa-instagram"></i> Instagram
-                    </a>
+                    <<a href="https://instagram.com/sk_elitefitness" target="_blank" class="contact-btn" style="background-color: #E1306C; color: white !important; font-weight: bold;">
+    <i class="fab fa-instagram"></i> Instagram
+</a>
                 </div>
             </div>
 
