--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | SK Elite Fitness</title>
     <link rel="stylesheet" href="style.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -35,9 +37,9 @@
                     <a href="mailto:info@sk-elitefitness.in" class="social-box email">
                         <i class="fas fa-envelope"></i> Email Us
                     </a>
-                    <<a href="https://instagram.com/sk_elitefitness" target="_blank" class="contact-btn" style="background-color: #E1306C; color: white !important; font-weight: bold;">
-    <i class="fab fa-instagram"></i> Instagram
-</a>
+                    <a href="https://instagram.com/sk_elitefitness" target="_blank" class="contact-btn" style="background-color: #E1306C; color: white !important; font-weight: bold; text-decoration: none; display: flex; align-items: center; justify-content: center; gap: 10px; padding: 15px; border-radius: 8px; margin-top: 10px;">
+                        <i class="fab fa-instagram"></i> Instagram
+                    </a>
                 </div>
             </div>
 
@@ -61,8 +63,22 @@
                     </div>
 
                     <div class="input-group">
+                        <label>Select Country*</label>
+                        <select id="countrySelector" onchange="updateCountryCode()" style="width: 100%; padding: 12px; background: #222; border: 1px solid #444; color: white; border-radius: 5px;">
+                            <option value="+91">India (+91)</option>
+                            <option value="+1">USA / Canada (+1)</option>
+                            <option value="+44">UK (+44)</option>
+                            <option value="+971">UAE (+971)</option>
+                            <option value="+61">Australia (+61)</option>
+                            <option value="+65">Singapore (+65)</option>
+                            <option value="+49">Germany (+49)</option>
+                            <option value="">Other</option>
+                        </select>
+                    </div>
+
+                    <div class="input-group">
                         <label>Phone Number*</label>
-                        <input type="tel" name="phone" required placeholder="+91 XXXXX XXXXX">
+                        <input type="tel" id="phoneNumber" name="phone" required placeholder="Mobile Number" value="+91 ">
                     </div>
 
                     <div class="input-group">
@@ -92,72 +108,4 @@
     </section>
 
     <footer>
-        <div class="copyright">&copy; 2026 SK Elite Fitness. All Rights Reserved.</div>
-    </footer>
-
-    <div id="success-popup" class="popup-overlay">
-        <div class="popup-content">
-            <i class="fas fa-check-circle"></i>
-            <h2>Awesome!</h2>
-            <p>Your details have been sent successfully. We will contact you shortly.</p>
-            <button onclick="closePopup()">OK, GREAT</button>
-        </div>
-    </div>
-
-    <a href="https://wa.me/919635493218" class="float-whatsapp" target="_blank">
-        <i class="fab fa-whatsapp"></i>
-    </a>
-
-    <script>
-        const form = document.getElementById("contactForm");
-        
-        async function handleSubmit(event) {
-            event.preventDefault();
-            const status = document.getElementById("status-text");
-            const btn = document.getElementById("submitBtn");
-            const data = new FormData(event.target);
-            
-            // Show loading state
-            btn.innerText = "SENDING...";
-            btn.style.opacity = "0.7";
-            btn.disabled = true;
-
-            fetch(event.target.action, {
-                method: form.method,
-                body: data,
-                headers: {
-                    'Accept': 'application/json'
-                }
-            }).then(response => {
-                if (response.ok) {
-                    // SUCCESS: Show the popup & Reset form
-                    document.getElementById('success-popup').style.display = 'flex';
-                    form.reset();
-                    btn.innerText = "SEND ENQUIRY";
-                    btn.style.opacity = "1";
-                    btn.disabled = false;
-                    status.innerHTML = "";
-                } else {
-                    response.json().then(data => {
-                        if (Object.hasOwn(data, 'errors')) {
-                            status.innerHTML = data["errors"].map(error => error["message"]).join(", ");
-                        } else {
-                            status.innerHTML = "Oops! There was a problem sending your form";
-                        }
-                    })
-                }
-            }).catch(error => {
-                status.innerHTML = "Oops! There was a problem sending your form";
-                btn.innerText = "SEND ENQUIRY";
-                btn.disabled = false;
-            });
-        }
-        form.addEventListener("submit", handleSubmit);
-
-        function closePopup() {
-            document.getElementById('success-popup').style.display = 'none';
-        }
-    </script>
-
-</body>
-</html>
+        <div class="copyright
