--- a/yoga-info.html
+++ b/yoga-info.html
@@ -46,8 +46,31 @@
         </div>
     </section>
 
-    <footer>
-        <div class="copyright">&copy; 2026 SK Elite Fitness. All Rights Reserved.</div>
-    </footer>
+    <footer id="footer" style="background-color: #111; color: white; padding: 40px 20px; text-align: center; border-top: 5px solid #D32F2F;">
+    
+    <div class="footer-links" style="margin-bottom: 20px;">
+        <a href="index.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Home</a>
+        <a href="services.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Services</a>
+        <a href="#" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Policies</a>
+        <a href="#" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Terms</a>
+    </div>
+
+    <div class="social-icons" style="margin-bottom: 20px;">
+        <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;">
+            <i class="fab fa-youtube"></i>
+        </a>
+    </div>
+
+    <div class="copyright" style="color: #bbb; font-size: 0.9rem;">
+        &copy; 2026 SK Elite Fitness. All Rights Reserved.
+    </div>
+
+</footer>
 </body>
 </html>
