--- a/terms.html
+++ b/terms.html
@@ -1,1 +1,101 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms & Conditions | SK Elite Fitness</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        .policy-container { max-width: 900px; margin: 50px auto; padding: 20px; color: #ddd; }
+        .policy-container h1 { color: #D32F2F; text-align: center; margin-bottom: 40px; font-size: 2.5rem; }
+        .policy-container h2 { color: white; margin-top: 30px; border-left: 4px solid #D32F2F; padding-left: 15px; }
+        .policy-container h3 { color: #D32F2F; margin-top: 20px; font-size: 1.1rem; }
+        .policy-container p { line-height: 1.6; margin-bottom: 15px; color: #ccc; }
+        .policy-container ul, .policy-container ol { margin-left: 20px; margin-bottom: 20px; }
+        .policy-container li { margin-bottom: 10px; color: #ccc; }
+    </style>
+</head>
+<body>
 
+    <nav class="navbar">
+        <a href="index.html" class="logo">SK ELITE FITNESS</a>
+        <ul class="nav-links">
+            <li><a href="train.html">Train With Me</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="services.html"><i class="fas fa-shopping-cart"></i></a></li>
+        </ul>
+        <div class="hamburger"><i class="fas fa-bars"></i></div>
+    </nav>
+
+    <div class="policy-container">
+        <h1>Terms & Conditions</h1>
+        <p style="text-align: center; color: #888;">Effective Date: January 18, 2026</p>
+
+        <p>Welcome to SK Elite Fitness. By purchasing a training program, diet plan, or using our website, you enter into a binding agreement with SK Elite Fitness. Please read these terms carefully.</p>
+
+        <h2>1. Medical Disclaimer & Health</h2>
+        <ol>
+            <li><strong>Not Medical Advice:</strong> SK Elite Fitness trainers are certified professionals but <strong>not doctors</strong>. Our plans are for educational and fitness purposes only.</li>
+            <li><strong>Consult a Physician:</strong> You must consult a doctor before starting any new exercise or nutrition program, especially if you have pre-existing conditions like diabetes, heart issues, or injuries.</li>
+            <li><strong>Immediate Stop:</strong> If you experience dizziness, chest pain, or shortness of breath while exercising, you agree to stop immediately and seek medical attention.</li>
+            <li><strong>Health Disclosure:</strong> You confirm that you have disclosed all known medical conditions and injuries to us honestly before starting training.</li>
+        </ol>
+
+        <h2>2. Assumption of Risk & Liability Waiver</h2>
+        <ol start="5">
+            <li><strong>Inherent Risks:</strong> You acknowledge that weight training, cardio, and high-intensity interval training (HIIT) involve inherent risks of physical injury.</li>
+            <li><strong>Voluntary Participation:</strong> You are participating in these activities voluntarily and at your own risk.</li>
+            <li><strong>Release of Liability:</strong> You hereby release, waive, and discharge <strong>SK Elite Fitness</strong>, its owners, and trainers from any liability for injuries, accidents, or damages arising from your participation in our programs.</li>
+            <li><strong>Equipment Safety:</strong> You are responsible for ensuring your home environment or gym equipment is safe and in good working condition before use.</li>
+        </ol>
+
+        <h2>3. Intellectual Property (Copyright)</h2>
+        <ol start="9">
+            <li><strong>Ownership:</strong> All diet plans, workout charts, videos, and guides provided to you are the exclusive intellectual property of SK Elite Fitness.</li>
+            <li><strong>Personal Use Only:</strong> These materials are licensed to you for <strong>personal use only</strong>.</li>
+            <li><strong>No Resale:</strong> You may not share, sell, copy, or distribute these plans to friends, family, or online platforms. Violation of this clause will result in immediate termination and potential legal action for copyright infringement.</li>
+        </ol>
+
+        <h2>4. Client Code of Conduct</h2>
+        <ol start="12">
+            <li><strong>Respect:</strong> We maintain a zero-tolerance policy for harassment, abusive language, or inappropriate behavior towards trainers or staff.</li>
+            <li><strong>Termination:</strong> SK Elite Fitness reserves the right to terminate the membership of any client who violates this code of conduct. No refunds will be issued in such cases.</li>
+            <li><strong>Commitment:</strong> You agree to follow the program guidelines to the best of your ability. We cannot guarantee results if the plan is not followed consistentely.</li>
+        </ol>
+
+        <h2>5. Payments & Service Delivery</h2>
+        <ol start="15">
+            <li><strong>Advance Payment:</strong> All services must be paid for 100% in advance via our secure payment gateway (Razorpay).</li>
+            <li><strong>Non-Transferable:</strong> Memberships and plans are non-transferable. You cannot sell or give your remaining sessions to another person.</li>
+            <li><strong>Price Changes:</strong> We reserve the right to modify prices for future renewals. You will be notified of any changes before your next billing cycle.</li>
+        </ol>
+
+        <h2>6. Dispute Resolution</h2>
+        <ol start="18">
+            <li><strong>Governing Law:</strong> These terms shall be governed by the laws of India.</li>
+            <li><strong>Jurisdiction:</strong> Any legal disputes arising out of this agreement shall be subject to the exclusive jurisdiction of the courts in <strong>Hyderabad, Telangana</strong>.</li>
+        </ol>
+
+        <h2>7. Contact Us</h2>
+        <p>If you have any questions regarding these Terms, please contact us at <strong>info@sk-elitefitness.in</strong>.</p>
+    </div>
+
+    <footer id="footer" style="background-color: #111; color: white; padding: 40px 20px; text-align: center; border-top: 5px solid #D32F2F;">
+        <div class="footer-links" style="margin-bottom: 20px;">
+            <a href="index.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Home</a>
+            <a href="services.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Services</a>
+            <a href="policies.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Policies</a>
+            <a href="terms.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Terms</a>
+        </div>
+        <div class="social-icons" style="margin-bottom: 20px;">
+            <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;"><i class="fab fa-twitter"></i></a>
+            <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;"><i class="fab fa-youtube"></i></a>
+        </div>
+        <div class="copyright" style="color: #bbb; font-size: 0.9rem;">&copy; 2026 SK Elite Fitness. All Rights Reserved.</div>
+    </footer>
+
+</body>
+</html>
