--- a/policies.html
+++ b/policies.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy & Refund Policy | SK Elite Fitness</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        .policy-container { max-width: 900px; margin: 50px auto; padding: 20px; color: #ddd; }
+        .policy-container h1 { color: #D32F2F; text-align: center; margin-bottom: 40px; font-size: 2.5rem; }
+        .policy-container h2 { color: white; margin-top: 30px; border-left: 4px solid #D32F2F; padding-left: 15px; }
+        .policy-container p { line-height: 1.6; margin-bottom: 15px; color: #ccc; }
+        .policy-container ul { margin-left: 20px; margin-bottom: 20px; }
+        .policy-container li { margin-bottom: 10px; color: #ccc; }
+    </style>
+</head>
+<body>
 
+    <nav class="navbar">
+        <a href="index.html" class="logo">SK ELITE FITNESS</a>
+        <ul class="nav-links">
+            <li><a href="train.html">Train With Me</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="services.html"><i class="fas fa-shopping-cart"></i></a></li>
+        </ul>
+        <div class="hamburger"><i class="fas fa-bars"></i></div>
+    </nav>
+
+    <div class="policy-container">
+        <h1>Privacy & Refund Policy</h1>
+
+        <h2>1. Refund & Cancellation Policy</h2>
+        <p>We believe in our methods, but we also respect Indian Consumer Protection laws. Here are our refund terms:</p>
+        <ul>
+            <li><strong>3-Day Cooling-Off Period:</strong> You may cancel your subscription for a full refund within <strong>3 days</strong> of the original purchase date if you are unsatisfied with the initial consultation.</li>
+            <li><strong>How to Claim:</strong> To request a refund, email us at info@sk-elitefitness.in within 72 hours of payment.</li>
+            <li><strong>After 3 Days:</strong> Once the 3-day window has passed, all training packages and diet plans become <strong>100% non-refundable</strong>.</li>
+            <li><strong>Session Cancellations (1-on-1):</strong> You must provide 24 hours' notice to cancel a scheduled live session. Less than 24 hours' notice will result in the session being forfeited.</li>
+            <li><strong>Medical Freeze:</strong> Memberships may be paused for medical reasons (with a valid doctor's note) for up to 30 days. This extends your validity but does not grant a cash refund.</li>
+        </ul>
+
+        <h2>2. Privacy Policy (Data Protection)</h2>
+        <p>We respect your privacy and comply with standard data protection norms.</p>
+        <ul>
+            <li><strong>What We Collect:</strong> We collect Name, Phone, Email, and Health Metrics (Weight, Height, Injuries) to create your plan.</li>
+            <li><strong>Data Usage:</strong> Your data is used <strong>strictly</strong> for coaching purposes. We do not sell or trade your data to third parties.</li>
+            <li><strong>Photo Privacy:</strong> We will <strong>never</strong> post your transformation photos on social media (Instagram/Facebook) without your explicit written or verbal permission.</li>
+            <li><strong>Security:</strong> We use secure servers and do not store sensitive payment information (like Card Numbers or UPI PINs). All payments are handled by Razorpay.</li>
+        </ul>
+
+        <h2>3. Cookie Policy</h2>
+        <p>Our website uses standard cookies to improve your browsing experience and remember your login details. You can disable cookies in your browser settings if you prefer.</p>
+
+        <h2>4. Contact Us</h2>
+        <p>For any privacy or refund related queries, please contact:</p>
+        <p style="color: white;"><strong>Email:</strong> info@sk-elitefitness.in<br>
+        <strong>Phone:</strong> +91 96354 93218</p>
+    </div>
+
+    <footer id="footer" style="background-color: #111; color: white; padding: 40px 20px; text-align: center; border-top: 5px solid #D32F2F;">
+        <div class="footer-links" style="margin-bottom: 20px;">
+            <a href="index.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Home</a>
+            <a href="services.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Services</a>
+            <a href="policies.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Policies</a>
+            <a href="terms.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Terms</a>
+        </div>
+        <div class="social-icons" style="margin-bottom: 20px;">
+            <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;"><i class="fab fa-twitter"></i></a>
+            <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;"><i class="fab fa-youtube"></i></a>
+        </div>
+        <div class="copyright" style="color: #bbb; font-size: 0.9rem;">&copy; 2026 SK Elite Fitness. All Rights Reserved.</div>
+    </footer>
+
+</body>
+</html>
