--- a/about.html
+++ b/about.html
@@ -1,1 +1,169 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us | SK Elite Fitness</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        /* Special Styles for About Page */
+        .about-hero {
+            text-align: center;
+            padding: 80px 20px;
+            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://images.unsplash.com/photo-1534438327276-14e5300c3a48?q=80&w=1470&auto=format&fit=crop');
+            background-size: cover;
+            background-position: center;
+            color: white;
+        }
 
+        .story-section {
+            max-width: 1000px;
+            margin: 50px auto;
+            padding: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            gap: 40px;
+        }
+        
+        .story-image {
+            flex: 1;
+            min-width: 300px;
+        }
+        .story-image img {
+            width: 100%;
+            border-radius: 10px;
+            border: 2px solid #D32F2F;
+            box-shadow: 0 0 20px rgba(211, 47, 47, 0.2);
+        }
+
+        .story-text {
+            flex: 1.5;
+            min-width: 300px;
+            color: #ccc;
+        }
+        .story-text h2 { color: white; font-size: 2rem; margin-bottom: 20px; }
+        .story-text span { color: #D32F2F; }
+
+        .motivation-box {
+            background: #111;
+            text-align: center;
+            padding: 60px 20px;
+            margin-top: 50px;
+            border-top: 1px solid #333;
+            border-bottom: 1px solid #333;
+        }
+        .motivation-box h1 { font-size: 3rem; color: white; margin-bottom: 20px; text-transform: uppercase; font-style: italic; }
+        .motivation-box p { font-size: 1.2rem; color: #888; max-width: 700px; margin: 0 auto; }
+
+        .values-grid {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            padding: 50px 20px;
+            flex-wrap: wrap;
+        }
+        .value-card {
+            background: #1a1a1a;
+            padding: 30px;
+            width: 300px;
+            border-radius: 8px;
+            text-align: center;
+            border: 1px solid #333;
+            transition: 0.3s;
+        }
+        .value-card:hover { border-color: #D32F2F; transform: translateY(-5px); }
+        .value-card i { font-size: 2rem; color: #D32F2F; margin-bottom: 15px; }
+        .value-card h3 { color: white; margin-bottom: 10px; }
+        .value-card p { color: #888; font-size: 0.9rem; }
+
+    </style>
+</head>
+<body>
+
+    <nav class="navbar">
+        <a href="index.html" class="logo">SK ELITE FITNESS</a>
+        <ul class="nav-links">
+            <li><a href="about.html" class="active-page">About</a></li> <li><a href="train.html">Train With Me</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="services.html"><i class="fas fa-shopping-cart"></i></a></li>
+        </ul>
+        <div class="hamburger"><i class="fas fa-bars"></i></div>
+    </nav>
+
+    <section class="about-hero">
+        <h1 style="font-size: 3.5rem; margin-bottom: 10px;">MORE THAN JUST <span style="color:#D32F2F;">MUSCLE.</span></h1>
+        <p style="font-size: 1.2rem; color: #ddd;">Building Discipline. Forging Character. Transforming Lives.</p>
+    </section>
+
+    <section class="story-section">
+        <div class="story-image">
+            <img src="https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?q=80&w=1470&auto=format&fit=crop" alt="Trainer Image">
+        </div>
+        <div class="story-text">
+            <h2>The <span>SK Elite</span> Story</h2>
+            <p>I wasn't born with genetics of steel. Like many of you, I started my journey unsure, overwhelmed, and struggling to find consistency.</p>
+            <br>
+            <p><strong>SK Elite Fitness</strong> was born out of a simple realization: The fitness industry is full of shortcuts, fake promises, and "magic pills." I wanted to create something real.</p>
+            <br>
+            <p>My philosophy is simple. Training isn't just about how you look in the mirror; it's about the mental toughness you build when you want to quit but choose to do <em>one more rep</em>. That discipline bleeds into every other area of your life—your career, your relationships, and your mindset.</p>
+            <br>
+            <p>I don't just train bodies. I build <strong>Elite Mindsets</strong>.</p>
+        </div>
+    </section>
+
+    <section class="motivation-box">
+        <h1>"Discipline > Motivation"</h1>
+        <p>Motivation is a feeling that comes and goes. Discipline is a choice you make every single day. Stop waiting for the 'right time'. The right time is NOW.</p>
+        <br>
+        <a href="services.html" class="cta-button" style="display: inline-block; background: #D32F2F; color: white; padding: 15px 30px; text-decoration: none; border-radius: 5px; font-weight: bold; margin-top: 20px;">START YOUR JOURNEY</a>
+    </section>
+
+    <section class="values-grid">
+        <div class="value-card">
+            <i class="fas fa-fire"></i>
+            <h3>Passion</h3>
+            <p>We don't just go through the motions. We attack every workout with intensity and purpose.</p>
+        </div>
+        <div class="value-card">
+            <i class="fas fa-brain"></i>
+            <h3>Science-Based</h3>
+            <p>No bro-science. Our diet and training plans are backed by proven physiological principles.</p>
+        </div>
+        <div class="value-card">
+            <i class="fas fa-users"></i>
+            <h3>Community</h3>
+            <p>When you join SK Elite, you aren't just a client. You are part of a family that pushes you to be better.</p>
+        </div>
+    </section>
+
+    <footer id="footer" style="background-color: #111; color: white; padding: 40px 20px; text-align: center; border-top: 5px solid #D32F2F;">
+        <div class="footer-links" style="margin-bottom: 20px;">
+            <a href="index.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Home</a>
+            <a href="about.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">About</a>
+            <a href="services.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Services</a>
+            <a href="policies.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Policies</a>
+            <a href="terms.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Terms</a>
+        </div>
+        <div class="social-icons" style="margin-bottom: 20px;">
+            <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;"><i class="fab fa-twitter"></i></a>
+            <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;"><i class="fab fa-youtube"></i></a>
+        </div>
+        <div class="copyright" style="color: #bbb; font-size: 0.9rem;">&copy; 2026 SK Elite Fitness. All Rights Reserved.</div>
+    </footer>
+
+    <script>
+        const hamburger = document.querySelector('.hamburger');
+        const navLinks = document.querySelector('.nav-links');
+        if(hamburger){
+            hamburger.addEventListener('click', () => {
+                navLinks.classList.toggle('active');
+            });
+        }
+    </script>
+
+</body>
+</html>
