--- a/services.html
+++ b/services.html
@@ -87,6 +87,7 @@
     <nav class="navbar">
         <a href="index.html" class="logo">SK ELITE FITNESS</a>
         <ul class="nav-links">
+            <li><a href="about.html">About</a></li>
             <li><a href="train.html">Train With Me</a></li>
             <li><a href="services.html" class="active-page">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
