--- a/train.html
+++ b/train.html
@@ -12,6 +12,7 @@
     <nav class="navbar">
         <a href="index.html" class="logo">SK ELITE FITNESS</a>
         <ul class="nav-links">
+            <li><a href="about.html">About</a></li>
             <li><a href="train.html" class="active-page">Train With Me</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
