--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <li><a href="about.html">About</a></li>
             <li><a href="train.html">Train With Me</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact</a></li> <li><a href="services.html"><i class="fas fa-shopping-cart"></i></a></li>
+            <li><a href="contact.html">Contact</a></li> 
+            <li><a href="services.html"><i class="fas fa-shopping-cart"></i></a></li>
         </ul>
         <div class="hamburger">
             <i class="fas fa-bars"></i>
@@ -37,44 +38,50 @@
     </header>
 
     <section class="insta-bar" style="text-align: center; padding: 60px 20px; background-color: #000; border-bottom: 2px solid #222;">
-    <h2 style="font-size: 3.5rem; color: white; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 2px;">
-        Follow The Journey
-    </h2>
-    <p style="font-size: 1.5rem; color: #ccc; margin-bottom: 30px;">
-        Daily tips, motivation, and transformation stories.
-    </p>
-    <a href="https://instagram.com/sk_elitefitness" target="_blank" class="insta-btn" style="color: #D32F2F !important; font-size: 1.8rem; font-weight: bold; text-decoration: none; border: 2px solid #D32F2F; padding: 10px 30px; border-radius: 50px; display: inline-block; transition: 0.3s;">
-        <i class="fab fa-instagram"></i> @sk_elitefitness
-    </a>
-</section>
+        <h2 style="font-size: 3.5rem; color: white; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 2px;">
+            Follow The Journey
+        </h2>
+        <p style="font-size: 1.5rem; color: #ccc; margin-bottom: 30px;">
+            Daily tips, motivation, and transformation stories.
+        </p>
+        <a href="https://instagram.com/sk_elitefitness" target="_blank" class="insta-btn" style="color: #D32F2F !important; font-size: 1.8rem; font-weight: bold; text-decoration: none; border: 2px solid #D32F2F; padding: 10px 30px; border-radius: 50px; display: inline-block; transition: 0.3s;">
+            <i class="fab fa-instagram"></i> @sk_elitefitness
+        </a>
+    </section>
 
     <footer id="footer" style="background-color: #111; color: white; padding: 40px 20px; text-align: center; border-top: 5px solid #D32F2F;">
-    
-    <div class="footer-links" style="margin-bottom: 20px;">
-        <a href="index.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Home</a>
-        <a href="services.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Services</a>
-        <a href="policies.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Policies</a>
-        <a href="terms.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Terms</a>
-    </div>
+        
+        <div class="footer-links" style="margin-bottom: 20px;">
+            <a href="index.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Home</a>
+            <a href="services.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Services</a>
+            <a href="policies.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Policies</a>
+            <a href="terms.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Terms</a>
+        </div>
 
-    <div class="social-icons" style="margin-bottom: 20px;">
-        <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;">
-            <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;">
-            <i class="fab fa-twitter"></i>
-        </a>
-        <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;">
-            <i class="fab fa-youtube"></i>
-        </a>
-    </div>
+        <div class="social-icons" style="margin-bottom: 20px;">
+            <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;">
+                <i class="fab fa-youtube"></i>
+            </a>
+        </div>
 
-    <div class="copyright" style="color: #bbb; font-size: 0.9rem;">
-        &copy; 2026 SK Elite Fitness. All Rights Reserved.
-    </div>
+        <div class="copyright" style="color: #bbb; font-size: 0.9rem;">
+            &copy; 2026 SK Elite Fitness. All Rights Reserved.
+        </div>
+    </footer>
 
-</footer>
-
+    <a href="https://wa.me/919635493218?text=Hello%20Coach,%20I%20am%20interested%20in%20your%20training%20plans!" 
+       target="_blank" 
+       style="position: fixed; bottom: 25px; right: 25px; background-color: #25D366; color: white; border-radius: 50%; width: 60px; height: 60px; display: flex; align-items: center; justify-content: center; font-size: 35px; box-shadow: 2px 2px 10px rgba(0,0,0,0.3); z-index: 1000; text-decoration: none; transition: transform 0.3s;"
+       onmouseover="this.style.transform='scale(1.1)'" 
+       onmouseout="this.style.transform='scale(1.0)'">
+        <i class="fab fa-whatsapp"></i>
+    </a>
     <script>
         // 1. Mobile Menu Logic
         const hamburger = document.querySelector('.hamburger');
