--- a/index.html
+++ b/index.html
@@ -50,31 +50,28 @@
     </section>
 
     <footer id="footer" style="background-color: #111; color: white; padding: 40px 20px; text-align: center; border-top: 5px solid #D32F2F;">
-        
         <div class="footer-links" style="margin-bottom: 20px;">
             <a href="index.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Home</a>
             <a href="services.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Services</a>
             <a href="policies.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Policies</a>
             <a href="terms.html" style="color: white; margin: 0 15px; text-decoration: none; font-size: 1.1rem; font-weight: 500;">Terms</a>
         </div>
-
-        <div class="social-icons" style="margin-bottom: 20px;">
-            <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;">
-                <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#" style="color: white; font-size: 1.5rem; margin: 0 12px; text-decoration: none;">
-                <i class="fab fa-youtube"></i>
-            </a>
-        </div>
-
         <div class="copyright" style="color: #bbb; font-size: 0.9rem;">
             &copy; 2026 SK Elite Fitness. All Rights Reserved.
         </div>
     </footer>
 
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/696d17abc0ef74197c0bf0ee/1jf928uga';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
     <a href="https://wa.me/919635493218?text=Hello%20Coach,%20I%20am%20interested%20in%20your%20training%20plans!" 
        target="_blank" 
        style="position: fixed; bottom: 25px; right: 25px; background-color: #25D366; color: white; border-radius: 50%; width: 60px; height: 60px; display: flex; align-items: center; justify-content: center; font-size: 35px; box-shadow: 2px 2px 10px rgba(0,0,0,0.3); z-index: 1000; text-decoration: none; transition: transform 0.3s;"
@@ -82,6 +79,7 @@
        onmouseout="this.style.transform='scale(1.0)'">
         <i class="fab fa-whatsapp"></i>
     </a>
+
     <script>
         // 1. Mobile Menu Logic
         const hamburger = document.querySelector('.hamburger');
@@ -96,15 +94,11 @@
         let currentSlide = 0;
 
         function nextSlide() {
-            // Remove 'active' from current slide
             slides[currentSlide].classList.remove('active');
-            // Calculate next slide
             currentSlide = (currentSlide + 1) % slides.length;
-            // Add 'active' to new slide
             slides[currentSlide].classList.add('active');
         }
 
-        // Change image every 5 seconds
         if(slides.length > 0) {
             setInterval(nextSlide, 5000);
         }
