--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
     s0.parentNode.insertBefore(s1,s0);
     })();
     </script>
+    
     <a href="https://wa.me/919635493218?text=Hello%20Coach,%20I%20am%20interested%20in%20your%20training%20plans!" 
        target="_blank" 
-       style="position: fixed; bottom: 25px; right: 25px; background-color: #25D366; color: white; border-radius: 50%; width: 60px; height: 60px; display: flex; align-items: center; justify-content: center; font-size: 35px; box-shadow: 2px 2px 10px rgba(0,0,0,0.3); z-index: 1000; text-decoration: none; transition: transform 0.3s;"
+       style="position: fixed; bottom: 25px; left: 25px; background-color: #25D366; color: white; border-radius: 50%; width: 60px; height: 60px; display: flex; align-items: center; justify-content: center; font-size: 35px; box-shadow: 2px 2px 10px rgba(0,0,0,0.3); z-index: 1000; text-decoration: none; transition: transform 0.3s;"
        onmouseover="this.style.transform='scale(1.1)'" 
        onmouseout="this.style.transform='scale(1.0)'">
         <i class="fab fa-whatsapp"></i>
